--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 dj-database-url==1.0.0
 Django==4.1.2
 django-heroku==0.3.1
+gunicorn==20.1.0
 psycopg2==2.9.4
 sqlparse==0.4.3
 unicorn==2.0.0
